--- a/manifest.json
+++ b/manifest.json
@@ -7,25 +7,9 @@
   "display": "standalone",
   "orientation": "natural",
   "scope": "/",
-  "start_url": "./index.html",
+  "start_url": "/index.html",
   "theme_color": "#ef2e3b",
-  "iarc_rating_id": "e58c174a-81d2-5c3c-32cc-34b8de4a52e9",
   "prefer_related_applications": false,
-  "edge_side_panel": {
-    "preferred_width": "narrow"
-  },
-  "related_applications": [
-    {
-      "platform": "play",
-      "id": "com.example.app1",
-      "url": "https://play.google.com/store/apps/details?id=com.example.app1"
-    },
-    {
-      "platform": "itunes",
-      "id": "com.example.app2",
-      "url": "https://itunes.apple.com/app/example-app2/id123456789"
-    }
-  ],
   "shortcuts": [
     {
       "name": "About me",
@@ -44,11 +28,6 @@
   ],
   "launch_handler": {
     "client_mode": ["navigate-existing", "auto"]
-  },
-  "web_apps": {
-    "navigation_scope": "/index.html",
-    "scope": "index.html",
-    "open_as_window": true
   },
   "icons": [
     {
